# ne_span

./: .gitignore  README.md  ne_span.py  pyproject.toml  tokenizer.py
.github/workflows/: build-on-tag.yml
src/ne_span/: __init__.py  ne_span.py
src/ne_span_pkg/: __init__.py
